--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -141,7 +141,7 @@ mutation DoTwoNestedThingsInSerial($createInput: CreateReviewInput!, $deleteInpu
 
 ## Caveats
 
-As pointed out by [members from the GraphQL Technical Steering Committee]((https://benjie.dev/graphql/nested-mutations)), while the above approach does execute in a GraphQL server, it does not satisfy the GraphQL spec requirement that:
+As pointed out by [members from the GraphQL Technical Steering Committee](https://benjie.dev/graphql/nested-mutations), while the above approach does execute in a GraphQL server, it does not satisfy the GraphQL spec requirement that:
 
 > resolution of fields other than top-level mutation fields must always be side effect-free and idempotent.
 
