--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -147,4 +147,4 @@ As pointed out by [members from the GraphQL Technical Steering Committee](https:
 
 Instead it is recommended that any GraphQL mutations by specified at the root level so they are executed serially, or that any nested fields are combined so only one action is actually performed.
 
-At this time, there is currently not an official name spacing tool that nested mutations aims to solve, but there has been a [proposal for GraphQL Namespaces](https://github.com/graphql/graphql-spec/issues/163) open for some time where we encourage community members to share their requirements for any spec updates.
+At this time the only solution the GraphQL specification provides for grouping related mutations is field naming conventions and ordering these fields carefully - there's currently no spec-compliant solution to having an overwhelming number of fields on the root mutation type. However, there are some interesting proposals to address this issue that we encourage community members to review and provide feedback on, in particular the [proposal for GraphQL Namespaces](https://github.com/graphql/graphql-spec/issues/163) and the [proposal for "serial fields"](https://github.com/graphql/graphql-spec/issues/252).
