Link specific pricing anchor

--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -123,7 +123,7 @@ Apollo offers the following router options, in increasing order of configurabili
 
 Since the Apollo Router is [source-available](https://www.apollographql.com/blog/evaluating-apollo-router-understanding-free-and-open-vs-commercial-features), you can use its codebase without connecting it to GraphOS. GraphOS organizations with the Enterprise plan can [connect a self-hosted router to GraphOS](./quickstart/self-hosted#6-connect-the-router-to-graphos) for an expanded feature set. All cloud routers are automatically connected to GraphOS.
 
-A router connected to GraphOS, whether cloud- or self-hosted, is called a **GraphOS Router**, and has access to specific GraphOS features depending on the connected GraphOS organization's plan. Refer to the [pricing page](https://www.apollographql.com/pricing/) to compare GraphOS feature support across plan types.
+A router connected to GraphOS, whether cloud- or self-hosted, is called a **GraphOS Router**, and has access to specific GraphOS features depending on the connected GraphOS organization's plan. Refer to the [pricing page](https://www.apollographql.com/pricing#graphos-router) to compare GraphOS Router features across plan types.
 
 ## Setup and configuration
 
