Link to specific pricing page anchors

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -233,7 +233,7 @@ To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/)
 
 To create a non-cloud graph, follow these steps:
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#graphos-router" />
 
 1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
