--- a/src/content/graphos/delivery/contract-reference.mdx
+++ b/src/content/graphos/delivery/contract-reference.mdx
@@ -4,7 +4,7 @@ subtitle: Reference for valid @tag locations, names, contract errors, and more
 description: Reference for valid @tag locations, naming conventions, dependent tag relationships, and errors for Apollo GraphOS contracts.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 ## Rules for `@tag`s and contracts
 
