--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -4,7 +4,7 @@ subtitle: Learn how to create, use, and edit contracts in GraphOS
 description: Learn how to use the @tag directive in subgraph schemas andwhot to create, edit, and validate contracts in GraphOS Studio.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 <Note>
 
