--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -19,7 +19,7 @@ GraphOS provides the following schema governance tools:
 
 <EnterpriseFeature>
 
-Schema proposals are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/docs/graphos/enterprise/).
+Schema proposals are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing#collaboration).
 
 </EnterpriseFeature>
 
@@ -35,7 +35,7 @@ To integrate other aspects of your supergraph configuration, such as your router
 
 <EnterpriseFeature>
 
-Contracts are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/docs/graphos/enterprise/).
+Contracts are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing#collaboration).
 
 </EnterpriseFeature>
 
