--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -193,13 +193,13 @@ For more info on linter checks, see [Schema linting](./schema-linter/).
 
 ## Proposals checks
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#delivery-pipeline"/>
 
 For more info on proposals checks, see the [schema proposals documentation](./schema-proposals/).
 
 ## Contract checks
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#delivery-pipeline"/>
 
 For more info on contract checks, see the [contracts documentation](./contracts/).
 
