--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -4,7 +4,7 @@ subtitle: Edit schemas, lint and check changes, and request reviews in GraphOS
 description: Propose GraphQL schema changes in GraphOS Studio. Edit and lint schemas, save and check revisions, and request reviews for async collaboration.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 This article describes actions in the **Proposal creation** stage of the [schema proposal workflow](./#proposal-workflow).
 
