--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -4,7 +4,7 @@ subtitle: Review and provide feedback on proposed schema changes in GraphOS
 description: Review and provide feedback on GraphQL schema proposals in GraphOS Studio. Explore changes, add comments, and approve proposals.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 This article describes actions in the **Proposal review** stage of the [schema proposal workflow](./#proposal-workflow).
 
