--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -144,7 +144,7 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 ### Custom webhooks (enterprise only)
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#integrations" />
 
 Custom webhooks require you to set up an HTTPS endpoint that is accessible via the public internet. Webhook notifications are sent to this endpoint as `POST` requests. Notification details are provided as JSON in the request body, as described in [Webhook format](./schema-change-integration/#webhook-format).
 
