--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -3,7 +3,7 @@ title: Audit log of material GraphOS events
 description: Download a log of all material events that have occured in your organization
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#security" />
 
 Organizations with a GraphOS [Enterprise plan](http://apollographql.com/pricing) can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
 
