--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -2,7 +2,7 @@
 title: Setting up Apollo SSO with Okta
 ---
 
-<PremiumFeature>
+<PremiumFeature linkWithAnchor="https://www.apollographql.com/pricing#security">
 
 **Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing/).**
 This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
