--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -4,7 +4,7 @@ subtitle: Configure default reviewers, approval requirements, and more
 description: Fine-tune the GraphQL schema proposal workflow by configuring permissions, default reviewers, approval requirements, and schema checks with GraphOS.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 [Org and graph admins](../../org/members/#organization-wide-member-roles) can configure these aspects of schema proposals:
 
