--- a/src/content/graphos/delivery/schema-proposals/implementation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/implementation.mdx
@@ -4,7 +4,7 @@ subtitle: Use Rover and schema checks to implement only approved changes
 description: Pull GraphQL schema changes from schema proposals using Rover, validate them with schema checks, and publish them to GraphOS.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 This article describes actions in the **Proposal implementation** and **publication** stages of the [schema proposal workflow](./#proposal-workflow).
 
