--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -4,7 +4,7 @@ subtitle: Propose, review, and track changes to new and published schemas
 description: Use GraphOS's native GraphQL schema change management process propose, review, and track schema changes before and after publication.
 ---
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
 As your supergraph schema grows, managing changes becomes more difficult.
 Assessing the impact of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations becomes more complex.
