--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -4,7 +4,7 @@ subtitle: Receive webhook alerts whenever GraphOS attempts to build a new superg
 description: Configure Apollo GraphOS to notify your team via webhook about schema build attempts in your federated graph.
 ---
 
-<PremiumFeature />
+<PremiumFeature linkWithAnchor="https://www.apollographql.com/pricing#integrations"/>
 
 <PreviewFeature />
 
