--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -98,7 +98,7 @@ Learn more about [schema checks](../delivery/schema-checks).
 
 ### Schema proposals permissions
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration" />
 
 The table below shows default schema proposal settings. You can [configure which roles can create, edit, and approve proposals](../delivery/schema-proposals/configuration#configure-permissions-and-approvals).
 
@@ -114,7 +114,7 @@ The table below shows default schema proposal settings. You can [configure which
 
 ### Contract permissions
 
-<EnterpriseFeature />
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration" />
 
 Learn more about [contracts](../delivery/contracts/).
 
