--- a/src/content/graphos/cloud-routing/configuration.mdx
+++ b/src/content/graphos/cloud-routing/configuration.mdx
@@ -61,7 +61,7 @@ headers:
 
 ## Router configuration YAML
 
-You can configure your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab or page.
+You can configure your router's behavior in **Router configuration YAML** on the **Cloud Router** tab or page.
 
 On the [**Serverless** plan](../org/plans/), you can configure:
 
@@ -352,7 +352,7 @@ cors:
 
 #### Response `Vary` header
 
-A plugin may set a response `Vary` header. If, after all plugins are processed, there is no response `Vary` header, then the router will add one with a value of "origin".
+A plugin may set a response `Vary` header. If, after all plugins are processed, there is no response `Vary` header, then the router will add one with a value of `origin`.
 
 ### Subgraph error inclusion
 
