--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -731,12 +731,8 @@ Whenever a client sends an operation string to a router with safelisting enabled
 
 When comparing an incoming freeform GraphQL document to the registered operations in its PQL, the router **ignores some aspects** of the document that have no semantic impact:
 
-<!-- vale Google.Spacing = NO -->
-
-- [Ignored tokens](http://spec.graphql.org/draft/#sec-Language.Source-Text.Ignored-Tokens) such as white space, comments, and commas are ignored.
+- [Ignored tokens](http://spec.graphql.org/draft/#sec-language.source-text.ignored-tokens) such as white space, comments, and commas are ignored.
 - The order of **top-level** definitions (operation and fragment definitions) is ignored. This means that when assembling a full GraphQL document from its operation and fragments, there's no need to ensure that fragments are put in the same order at build time and at run time.
-
-<!-- vale Google.Spacing = YES -->
 
 However, **all other details of the document must match**. For example, field order, argument order, `$variable` names, alias names, string and numeric literals, and the presence of `__typename` fields must match between the incoming freeform GraphQL document and the document in the persisted query list.
 
