--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -48,7 +48,7 @@ flowchart LR;
 
 These router instances connect to GraphOS to fetch their managed configuration and report fine-grained operation metrics.
 
-This architecture helps you satisfy sophisticated requirements around data compliance and performance, and it also enables you to further customize your router's behavior with Enterprise-specific functionality (described [below](#apollo-router-features)).
+This architecture helps you satisfy sophisticated requirements around data compliance and performance, and it also enables you to further customize your router's behavior with Enterprise-specific functionality described below.
 
 <Tip>
 
