--- a/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
+++ b/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
@@ -2,9 +2,9 @@
 title: Setting up Apollo SSO with Azure AD
 ---
 
-<PremiumFeature linkWithAnchor="https://www.apollographql.com/pricing#security">
+<PremiumFeature>
 
-**Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing/).**
+**Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).**
 This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
 </PremiumFeature>
