--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -133,6 +133,8 @@ Similarly, any new client applications should use your router's URL.
 
 </Note>
 
+#### Router endpoint URL
+
 You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
 
 <img
@@ -143,7 +145,7 @@ You can find your endpoint URL on the **Cloud router** page in GraphOS Studio.
 
 <Note>
 
-Every router URL is on a subdomain of `apollographos.net`. Custom domains support will become available in 2024 for Dedicated cloud routers.
+By default, cloud router URLs are on a subdomain of `apollographos.net`. You can setup a [custom domain](./custom-domains) to minimize client-side changes.
 
 </Note>
 
