--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -1,45 +1,66 @@
 ---
-title: Custom Domains
+title: Custom domains
 subtitle: Connect a custom subdomain to your cloud graphs
-# description: Learn how to calculate and scale the throughput capacity of your cloud supergraph.
+description: Learn how to calculate and scale the throughput capacity of your cloud supergraph.
 ---
 
 <DedicatedPreview />
 
-Custom Domains lets you replace the default apollographos.net domain with your own subdomain (eg: api.apollographql.com).
+The **custom domains** feature lets you replace the default `apollographos.net` [router endpoint URL](./quickstart#router-endpoint-url) with your own subdomain, for example `api.apollographql.com`.
 
-Custom Domains is useful for:
-* Minimizing client-side changes
-* Using your existing CORS policies and security controls
-* Protect your cloud routers with DDoS
+Custom domains can help to:
 
-## How it works
-Custom Domains runs on CloudFlare's global network. It provides DDoS protections and TLS termination to your cloud routers.
+- Minimize client-side changes
+- Use your existing CORS policies and security controls
+- Protect your cloud routers from DDoS attacks
 
-Custom Domains support CNAME records which are assigned at the variant level. Custom Domains does not support apex domains or A record configuration.
+## How custom domains works
 
-## Setup Custom Domains
-Later this year, Custom Domains will be available self service through GraphOS Studio. In the meantime, you'll need to open a support request. 
+Custom domains run on [Cloudflare's](https://www.cloudflare.com/) global network.
+Using a custom domain provides DDoS protections and TLS termination to your cloud routers.
+Custom domains support CNAME records which are assigned at the variant level.
 
-### Step 1: Setup a CNAME
-To get started with Custom Domains, create a CNAME record in your DNS provider that points at your Dedicated variant's existing subdomain.
+## Custom domains setup
 
-For example, create a CNAME for "api.mydomain.com" that points at "current--dedicated.apollographos.net".
+Setup includes two steps:
+
+1. Setting up a new CNAME record in your DNS provider.
+2. Verifying your CNAME with Apollo.
+  <Note>
+
+  Later in 2024, custom domains will be available self service through GraphOS Studio. In the meantime, you need to open a support request to verify your CNAME with Apollo.
+
+  </Note>
+
+### Setup a CNAME
+
+To get started with custom domains, create a [CNAME record](https://www.cloudflare.com/learning/dns/dns-records/dns-cname-record/) in your DNS provider that points at your Dedicated variant's [existing subdomain](./quickstart#router-endpoint-url). For example, create a CNAME for `api.mydomain.com` that points to `current--docs-example.apollographos.net`.
 
 <img
   className="screenshot"
-  alt="GraphOS Studio endpoint URL"
-  src="../../img/cloud-dedicated/variant-subdomain.jpg"
+  alt="A cloud router's endpoint displayed on the Cloud Router page in GraphOS Studio"
+  src="../../img/cloud-dedicated/router-endpoint.png"
 />
 
-### Step 2: Verify CNAME
-Next, open a support ticket requesting we enable your new CNAME. Apollo will reply with a new TXT record you'll need to add to your DNS to verify your CNAME.
+### Verify CNAME
 
-### Step 3: Go live
-Once your TXT record has been created, email Apollo that you've done so. Upon verification, your new CNAME will be live.
+Next, open a support ticket requesting Apollo to enable your new CNAME.
+You can open a ticket by clicking the **?** icon in the top right of [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and selecting **Contact Support**.
+
+<img
+  className="screenshot"
+  alt="Requesting a new CNAME in GraphOS Studio"
+  src="../../img/cloud-dedicated/support-ticket.png"
+/>
+
+Apollo will reply with a new TXT record you need to add to your DNS to verify your CNAME.
+Once you've created your TXT record, let Apollo know.
+Upon verification, your new CNAME will be live.
 
 ## Limitations
-Custom Domains does not support:
-* Apex records or A records
-* Multiple custom domains per variant
-* Load balancing traffic across multiple variants
+
+Custom domains doesn't support:
+
+- [Apex records](https://learn.microsoft.com/en-us/azure/dns/dns-zones-records#record-names) or [A records](https://learn.microsoft.com/en-us/azure/dns/dns-zones-records#record-types)
+- Multiple custom domains per variant
+- Load balancing traffic across multiple variants
