--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -1,7 +1,7 @@
 ---
 title: Custom domains
-subtitle: Connect a custom subdomain to your cloud graphs
-description: Learn how to calculate and scale the throughput capacity of your cloud supergraph.
+subtitle: Use a custom subdomain for your cloud router endpoint
+description: Use a custom domain for your cloud router endpoint to minimize client-side changes, use existing security policies, and shield against DDoS attacks.
 ---
 
 <DedicatedPreview />
