--- a/src/content/graphos/cloud-routing/dedicated/throughput.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/throughput.mdx
@@ -105,7 +105,7 @@ Dedicated supports up to 10 GCUs per GraphOS variant.
 
 Dedicated starts with 1 GCU per variant. You can change a variant's GCUs via either:
 * [GraphOS Studio](#edit-gcus-in-studio)
-* [The Platform API](#edit-gcus-via-apis)
+* [The Platform API](#edit-gcus-via-api)
 
 <Note>
 
@@ -132,7 +132,7 @@ Then, select the number of GCUs required and click **Save changes**.
   src="../../img/cloud-dedicated/gcus-scale.png"
 />
 
-### Edit GCUs via APIs
+### Edit GCUs via API
 
 You can change a graph variant's GCUs with the following mutation from the [GraphOS Platform API](/graphos/platform-api/).
 
