Add file uploads to shared enterprise component

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -56,7 +56,7 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 </Tip>
 
-### Premium GraphOS Router features
+### Premium GraphOS router features
 
 <GraphOSRouterFeatures />
 
