--- a/src/content/shared/graphos-router-features.mdx
+++ b/src/content/shared/graphos-router-features.mdx
@@ -1,7 +1,7 @@
-
 [The Apollo Router](https://www.apollographql.com/docs/router/) supports a collection of premium features specific to GraphOS. These include:
 
 - **Real-time updates** via [GraphQL subscriptions](https://www.apollographql.com/docs/router/executing-operations/subscription-support/)
+- Support for [**file uploads** via multipart requests](./executing-operations/file-uploads)
 - **Authentication of inbound requests** via [JSON Web Token (JWT)](https://www.apollographql.com/docs/router/configuration/authn-jwt/)
 - [**Authorization** of specific fields and types](https://www.apollographql.com/docs/router/configuration/authorization) through the [`@requiresScopes`](https://www.apollographql.com/docs/router/configuration/authorization#requiresscopes), [`@authenticated`](https://www.apollographql.com/docs/router/configuration/authorization#authenticated), and [`@policy`](https://www.apollographql.com/docs/router/configuration/authorization#policy) directives
 - Incremental migration between subgraphs through [the progressive `@override` directive](/federation/entities-advanced/#incremental-migration-with-progressive-override).
