--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -119,7 +119,7 @@ Inject an environment variable into a GraphQL variable value by surrounding the 
 <img
   className="screenshot"
   src="../img/explorer-environment-variables-graphql-variables.png"
-  alt="Setting Explorer graphql variables with environment variables"
+  alt="Setting Explorer GraphQL variables with environment variables"
   width="600"
 />
 
