--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -141,7 +141,7 @@ switch (pet.__typename) {
 
 <Note>
 
-When using graphql-code-generator, accessing known interface fields like `Pet.name` will trigger a TypeScript error. See [issue 8538](https://github.com/dotansimha/graphql-code-generator/issues/8538) for more discussion.
+When using `graphql-code-generator`, accessing known interface fields like `Pet.name` will trigger a TypeScript error. See [issue 8538](https://github.com/dotansimha/graphql-code-generator/issues/8538) for more discussion.
 
 </Note>
 
