Reintroduce purposeful error

--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -6,6 +6,8 @@ description: Use GraphOS's native GraphQL schema change management process propo
 
 <EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
 
+This is a badd speling mistank.
+
 As your supergraph schema grows, managing changes becomes more difficult.
 Assessing the impact of subgraph schema changes on [composition](/federation/federated-types/composition/) and client operations becomes more complex.
 Once schema design changes are agreed upon, implementing them during subgraph development poses another challenge.
