--- a/src/content/shared/what-subscriptions-are-for.mdx
+++ b/src/content/shared/what-subscriptions-are-for.mdx
@@ -12,4 +12,4 @@ sequenceDiagram
     Router->>Client: Sends new data
 ```
 
-Subscriptions are best suited to apps that rely on frequently-changing, time-sensitive data such as stock prices, IoT sensor readings, live chat, or sports scores.
+Subscriptions are best suited to apps that rely on frequently changing, time-sensitive data such as stock prices, IoT sensor readings, live chat, or sports scores.
