--- a/src/content/shared/what-subscriptions-are-for.mdx
+++ b/src/content/shared/what-subscriptions-are-for.mdx
@@ -1,5 +1,5 @@
 
-GraphQL subscriptions enable clients to receive continual, real-time updates whenever new data becomes available. Unlike queries and mutations, subscriptions are long-lasting. This means a client can receive multiple updates from a single subscription:
+GraphQL subscriptions enable clients to receive continual, real-time updates whenever new data becomes available. Unlike queries and mutations, subscriptions are long-lasting. That means a client can receive multiple updates from a single subscription:
 
 ```mermaid
 sequenceDiagram
