Add mailto: link

--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -261,7 +261,7 @@ Organizations with an Enterprise plan can request a Data Processing Addendum (DP
 
 ## Requesting deletion of data
 
-To request the deletion of specific data from your Apollo organization, please email support@apollographql.com with the subject `Data deletion request`.
+To request the deletion of specific data from your Apollo organization, please email [support@apollographql.com](mailto:support@apollographql.com) with the subject `Data deletion request`.
 
 In your email, please include the following:
 
