--- a/src/content/basics/devtools/apollo-config.mdx
+++ b/src/content/basics/devtools/apollo-config.mdx
@@ -9,7 +9,7 @@ If you're using one of our workflow tools like the [Apollo CLI](./cli/) or the [
 
 There are two types of projects, `client` and `service`. When a `client` key is found in the config, a project is treated as a client project, and only `client:*` commands may be run against it. The same is true for `service` projects. The `apollo.config.js` file is meant to describe configuration for a single project only. If used in a monorepo with multiple projects, there should be a separate config file for each project.
 
-This document describes all the options available in the Apollo config and defines which are required vs. optional.
+This document describes all the options available in the Apollo config and defines which are required versus optional.
 
 ## Client projects
 
@@ -23,7 +23,7 @@ module.exports = {
 
 ### `client.service`
 
-Required - the Apollo CLI and VS Code extension rely on knowledge of your schema to show you "IntelliSense" (for example, autocomplete on fields, metrics annotations, query validation).
+**Required** - the Apollo CLI and VS Code extension rely on knowledge of your schema to show you "IntelliSense" (for example, autocomplete on fields, metrics annotations, query validation).
 
 There are a few different ways you can link your client to a schema:
 
