--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -30,7 +30,7 @@ Like the typical homepage for a Git repository, this page displays a Markdown-ba
 
 <Note>
 
-Only organization members with the [Org Admin, Graph Admin, Contributor, or Documenter role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), Contributors cannot edit its README.
+Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), Contributors cannot edit its README.
 
 </Note>
 
@@ -285,7 +285,7 @@ People outside your organization can't view any other pages for a public variant
 
 <Note>
 
-Only organization members with the [Org Admin or Graph Admin role](../org/members/) can toggle a variant's public visibility.
+Only organization members with the [**Org Admin** or **Graph Admin** role](../org/members/) can toggle a variant's public visibility.
 
 </Note>
 
@@ -315,7 +315,7 @@ If you have a [GraphOS Enterprise plan](../enterprise/), you can designate parti
 - Contributors cannot manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
 - Graph API Keys with the Contributor role cannot report usage metrics for a protected variant.
 
-Graph Admins and Org Admins can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
+**Graph Admins** and **Org Admins** can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
 
 ### Internal graph visibility (Enterprise only)
 
