--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -30,7 +30,7 @@ Like the typical homepage for a Git repository, this page displays a Markdown-ba
 
 <Note>
 
-Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), Contributors cannot edit its README.
+Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](../org/members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributors** cannot edit its README.
 
 </Note>
 
@@ -309,11 +309,11 @@ After you make a variant public, you can click the variant's **PUBLIC** label at
 
 ### Protected variants (Enterprise only)
 
-If you have a [GraphOS Enterprise plan](../enterprise/), you can designate particular variants of a graph as _protected variants_. A protected variant limits the capabilities of users with the [Contributor role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
+If you have a [GraphOS Enterprise plan](../enterprise/), you can designate particular variants of a graph as _protected variants_. A protected variant limits the capabilities of users with the [**Contributor** role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
 
 - Contributors cannot push schema updates to a protected variant.
 - Contributors cannot manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
-- Graph API Keys with the Contributor role cannot report usage metrics for a protected variant.
+- Graph API Keys with the **Contributor** role cannot report usage metrics for a protected variant.
 
 **Graph Admins** and **Org Admins** can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
 
