--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -113,7 +113,7 @@ Each type definition in the table includes:
   - You can click the name to view additional details for the type (such as fields for an object, or possible types for a union).
 - The type's description (if your schema includes one)
 - Which subgraphs define the type (if you have a federated supergraph)
-  - Users with the Consumer role can't view subgraph details.
+  - Users with the **Consumer** role can't view subgraph details.
 
 ##### Filtering your schema
 
@@ -311,8 +311,8 @@ After you make a variant public, you can click the variant's **PUBLIC** label at
 
 If you have a [GraphOS Enterprise plan](../enterprise/), you can designate particular variants of a graph as _protected variants_. A protected variant limits the capabilities of users with the [**Contributor** role](../org/members/#organization-wide-member-roles) to make certain changes to the variant:
 
-- Contributors cannot push schema updates to a protected variant.
-- Contributors cannot manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
+- **Contributors** cannot push schema updates to a protected variant.
+- **Contributors** cannot manage Explorer-related settings for a protected variant, such as setting the variant's endpoint URL.
 - Graph API Keys with the **Contributor** role cannot report usage metrics for a protected variant.
 
 **Graph Admins** and **Org Admins** can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
@@ -329,7 +329,7 @@ By default, graphs are visible to all members of your organization. If you have 
 
 You can configure visibility and grant your organization's members explicit access to your graph from the Permissions tab of your graph's Settings page.
 
-Note that Org Admins can always see all graphs in your organization.
+Note that **Org Admins** can always see all graphs in your organization.
 
 ## Dangerous actions
 
